Fixed spacing and styling of jump to

--- a/css/default.css
+++ b/css/default.css
@@ -1063,7 +1063,6 @@ a.loginText {
 }
 
 #jumpto {
-    padding-top: 73px;
     flex: 1
 }
 
@@ -1074,6 +1073,8 @@ a.loginText {
     max-height: 360px;
     overflow-y: auto;
     width:200px;
+    margin-top: 154px;
+    position: fixed;
 }
 
 #anchorlist a {
